// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInput props: getTheme: width:100,margin:10, 1`] = `
.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c0 {
  display: inline-block;
  width: 100%;
  height: 100%;
  display: block;
}

.c2 {
  box-sizing: border-box;
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  font-size: 1.2rem;
  cursor: text;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c2::-webkit-input-placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c2::-moz-placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c2:-ms-input-placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c2::placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c1 {
  position: relative;
  display: inline-block;
  outline: none;
  min-width: 3rem;
  width: 100%;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c3 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  color: #9EA4AE;
  right: 1rem;
  height: 100%;
  opacity: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  right: 0;
}

.c4 {
  height: 100%;
  border-left: 0.1rem solid #cccccc;
  -webkit-transition: all 0.3s linear 0.1s;
  -webkit-transition: all 0.3s linear 0.1s;
  transition: all 0.3s linear 0.1s;
  box-sizing: border-box;
}

.c7 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  border-top: 0.1rem solid #cccccc;
  height: 50%;
  cursor: pointer;
}

.c5 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  height: 50%;
  cursor: pointer;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
>
  <div
    className="c1"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "height": "3.2rem",
        "width": "100%",
      }
    }
  >
    <input
      autoFocus={false}
      className="c2"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      size="default"
      style={
        Object {
          "color": "#363B40",
          "paddingBottom": "0rem",
          "paddingLeft": "1rem",
          "paddingRight": "3.5rem",
          "paddingTop": "0rem",
        }
      }
      type="text"
      value=""
    />
    <span
      className="c3"
      style={
        Object {
          "fontSize": "1.4rem",
        }
      }
    >
      <div
        className="c4"
        disabled={false}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "width": "2.2rem",
          }
        }
      >
        <span
          className="c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={Object {}}
        >
          <i
            className="lugia-icon-direction_up   c6"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "color": "#9EA4AE",
                "cursor": "pointer",
                "fontSize": "1rem",
              }
            }
          />
        </span>
        <span
          className="c7"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={Object {}}
        >
          <i
            className="lugia-icon-direction_down   c6"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "color": "#9EA4AE",
                "cursor": "pointer",
                "fontSize": "1rem",
              }
            }
          />
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`NumberInput props: null 1`] = `
.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c0 {
  display: inline-block;
  width: 100%;
  height: 100%;
  display: block;
}

.c2 {
  box-sizing: border-box;
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  font-size: 1.2rem;
  cursor: text;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c2::-webkit-input-placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c2::-moz-placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c2:-ms-input-placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c2::placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c1 {
  position: relative;
  display: inline-block;
  outline: none;
  min-width: 3rem;
  width: 100%;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c3 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  color: #9EA4AE;
  right: 1rem;
  height: 100%;
  opacity: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  right: 0;
}

.c4 {
  height: 100%;
  border-left: 0.1rem solid #cccccc;
  -webkit-transition: all 0.3s linear 0.1s;
  -webkit-transition: all 0.3s linear 0.1s;
  transition: all 0.3s linear 0.1s;
  box-sizing: border-box;
}

.c7 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  border-top: 0.1rem solid #cccccc;
  height: 50%;
  cursor: pointer;
}

.c5 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  height: 50%;
  cursor: pointer;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
>
  <div
    className="c1"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "height": "3.2rem",
        "width": "100%",
      }
    }
  >
    <input
      autoFocus={false}
      className="c2"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      size="default"
      style={
        Object {
          "color": "#363B40",
          "paddingBottom": "0rem",
          "paddingLeft": "1rem",
          "paddingRight": "3.5rem",
          "paddingTop": "0rem",
        }
      }
      type="text"
      value=""
    />
    <span
      className="c3"
      style={
        Object {
          "fontSize": "1.4rem",
        }
      }
    >
      <div
        className="c4"
        disabled={false}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "width": "2.2rem",
          }
        }
      >
        <span
          className="c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={Object {}}
        >
          <i
            className="lugia-icon-direction_up   c6"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "color": "#9EA4AE",
                "cursor": "pointer",
                "fontSize": "1rem",
              }
            }
          />
        </span>
        <span
          className="c7"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={Object {}}
        >
          <i
            className="lugia-icon-direction_down   c6"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "color": "#9EA4AE",
                "cursor": "pointer",
                "fontSize": "1rem",
              }
            }
          />
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`NumberInput props: placeholder  1`] = `
.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c0 {
  display: inline-block;
  width: 100%;
  height: 100%;
  display: block;
}

.c2 {
  box-sizing: border-box;
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  font-size: 1.2rem;
  cursor: text;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c2::-webkit-input-placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c2::-moz-placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c2:-ms-input-placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c2::placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c1 {
  position: relative;
  display: inline-block;
  outline: none;
  min-width: 3rem;
  width: 100%;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c3 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  color: #9EA4AE;
  right: 1rem;
  height: 100%;
  opacity: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  right: 0;
}

.c4 {
  height: 100%;
  border-left: 0.1rem solid #cccccc;
  -webkit-transition: all 0.3s linear 0.1s;
  -webkit-transition: all 0.3s linear 0.1s;
  transition: all 0.3s linear 0.1s;
  box-sizing: border-box;
}

.c7 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  border-top: 0.1rem solid #cccccc;
  height: 50%;
  cursor: pointer;
}

.c5 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  height: 50%;
  cursor: pointer;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
>
  <div
    className="c1"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "height": "3.2rem",
        "width": "100%",
      }
    }
  >
    <input
      autoFocus={false}
      className="c2"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      placeholder="请填写内容"
      size="default"
      style={
        Object {
          "color": "#363B40",
          "paddingBottom": "0rem",
          "paddingLeft": "1rem",
          "paddingRight": "3.5rem",
          "paddingTop": "0rem",
        }
      }
      type="text"
      value=""
    />
    <span
      className="c3"
      style={
        Object {
          "fontSize": "1.4rem",
        }
      }
    >
      <div
        className="c4"
        disabled={false}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "width": "2.2rem",
          }
        }
      >
        <span
          className="c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={Object {}}
        >
          <i
            className="lugia-icon-direction_up   c6"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "color": "#9EA4AE",
                "cursor": "pointer",
                "fontSize": "1rem",
              }
            }
          />
        </span>
        <span
          className="c7"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={Object {}}
        >
          <i
            className="lugia-icon-direction_down   c6"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "color": "#9EA4AE",
                "cursor": "pointer",
                "fontSize": "1rem",
              }
            }
          />
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`NumberInput props: placeholder  2`] = `
.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c0 {
  display: inline-block;
  width: 100%;
  height: 100%;
  display: block;
}

.c2 {
  box-sizing: border-box;
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  font-size: 1.2rem;
  cursor: text;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c2::-webkit-input-placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c2::-moz-placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c2:-ms-input-placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c2::placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c1 {
  position: relative;
  display: inline-block;
  outline: none;
  min-width: 3rem;
  width: 100%;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c3 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  color: #9EA4AE;
  right: 1rem;
  height: 100%;
  opacity: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  right: 0;
}

.c4 {
  height: 100%;
  border-left: 0.1rem solid #cccccc;
  -webkit-transition: all 0.3s linear 0.1s;
  -webkit-transition: all 0.3s linear 0.1s;
  transition: all 0.3s linear 0.1s;
  box-sizing: border-box;
}

.c7 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  border-top: 0.1rem solid #cccccc;
  height: 50%;
  cursor: pointer;
}

.c5 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  height: 50%;
  cursor: pointer;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
>
  <div
    className="c1"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "height": "3.2rem",
        "width": "100%",
      }
    }
  >
    <input
      autoFocus={false}
      className="c2"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      placeholder=""
      size="default"
      style={
        Object {
          "color": "#363B40",
          "paddingBottom": "0rem",
          "paddingLeft": "1rem",
          "paddingRight": "3.5rem",
          "paddingTop": "0rem",
        }
      }
      type="text"
      value=""
    />
    <span
      className="c3"
      style={
        Object {
          "fontSize": "1.4rem",
        }
      }
    >
      <div
        className="c4"
        disabled={false}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "width": "2.2rem",
          }
        }
      >
        <span
          className="c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={Object {}}
        >
          <i
            className="lugia-icon-direction_up   c6"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "color": "#9EA4AE",
                "cursor": "pointer",
                "fontSize": "1rem",
              }
            }
          />
        </span>
        <span
          className="c7"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={Object {}}
        >
          <i
            className="lugia-icon-direction_down   c6"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "color": "#9EA4AE",
                "cursor": "pointer",
                "fontSize": "1rem",
              }
            }
          />
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`NumberInput props: size 1`] = `
.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c0 {
  display: inline-block;
  width: 100%;
  height: 100%;
  display: block;
}

.c2 {
  box-sizing: border-box;
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  font-size: 1.2rem;
  cursor: text;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c2::-webkit-input-placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c2::-moz-placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c2:-ms-input-placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c2::placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c1 {
  position: relative;
  display: inline-block;
  outline: none;
  min-width: 3rem;
  width: 100%;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c3 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  color: #9EA4AE;
  right: 1rem;
  height: 100%;
  opacity: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  right: 0;
}

.c4 {
  height: 100%;
  border-left: 0.1rem solid #cccccc;
  -webkit-transition: all 0.3s linear 0.1s;
  -webkit-transition: all 0.3s linear 0.1s;
  transition: all 0.3s linear 0.1s;
  box-sizing: border-box;
}

.c7 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  border-top: 0.1rem solid #cccccc;
  height: 50%;
  cursor: pointer;
}

.c5 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  height: 50%;
  cursor: pointer;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
>
  <div
    className="c1"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "height": "2.4rem",
        "width": "100%",
      }
    }
  >
    <input
      autoFocus={false}
      className="c2"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      size="small"
      style={
        Object {
          "color": "#363B40",
          "paddingBottom": "0rem",
          "paddingLeft": "1rem",
          "paddingRight": "3.5rem",
          "paddingTop": "0rem",
        }
      }
      type="text"
      value=""
    />
    <span
      className="c3"
      style={
        Object {
          "fontSize": "1.4rem",
        }
      }
    >
      <div
        className="c4"
        disabled={false}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "width": "2.2rem",
          }
        }
      >
        <span
          className="c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={Object {}}
        >
          <i
            className="lugia-icon-direction_up   c6"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "color": "#9EA4AE",
                "cursor": "pointer",
                "fontSize": "1rem",
              }
            }
          />
        </span>
        <span
          className="c7"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={Object {}}
        >
          <i
            className="lugia-icon-direction_down   c6"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "color": "#9EA4AE",
                "cursor": "pointer",
                "fontSize": "1rem",
              }
            }
          />
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`NumberInput props: size 2`] = `
.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c0 {
  display: inline-block;
  width: 100%;
  height: 100%;
  display: block;
}

.c2 {
  box-sizing: border-box;
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  font-size: 1.2rem;
  cursor: text;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c2::-webkit-input-placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c2::-moz-placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c2:-ms-input-placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c2::placeholder {
  color: $lugia-dict.@lugia/lugia-web.lightGreyColor;
  font-size: 1.2rem;
}

.c1 {
  position: relative;
  display: inline-block;
  outline: none;
  min-width: 3rem;
  width: 100%;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c3 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  color: #9EA4AE;
  right: 1rem;
  height: 100%;
  opacity: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  right: 0;
}

.c4 {
  height: 100%;
  border-left: 0.1rem solid #cccccc;
  -webkit-transition: all 0.3s linear 0.1s;
  -webkit-transition: all 0.3s linear 0.1s;
  transition: all 0.3s linear 0.1s;
  box-sizing: border-box;
}

.c7 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  border-top: 0.1rem solid #cccccc;
  height: 50%;
  cursor: pointer;
}

.c5 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  height: 50%;
  cursor: pointer;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
>
  <div
    className="c1"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "height": "4rem",
        "width": "100%",
      }
    }
  >
    <input
      autoFocus={false}
      className="c2"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      size="large"
      style={
        Object {
          "color": "#363B40",
          "paddingBottom": "0rem",
          "paddingLeft": "1rem",
          "paddingRight": "3.5rem",
          "paddingTop": "0rem",
        }
      }
      type="text"
      value=""
    />
    <span
      className="c3"
      style={
        Object {
          "fontSize": "1.4rem",
        }
      }
    >
      <div
        className="c4"
        disabled={false}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "cursor": "pointer",
            "width": "2.2rem",
          }
        }
      >
        <span
          className="c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={Object {}}
        >
          <i
            className="lugia-icon-direction_up   c6"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "color": "#9EA4AE",
                "cursor": "pointer",
                "fontSize": "1rem",
              }
            }
          />
        </span>
        <span
          className="c7"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={Object {}}
        >
          <i
            className="lugia-icon-direction_down   c6"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            style={
              Object {
                "color": "#9EA4AE",
                "cursor": "pointer",
                "fontSize": "1rem",
              }
            }
          />
        </span>
      </div>
    </span>
  </div>
</div>
`;
